--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -24,6 +24,7 @@ ceph_release_num:
   pacific: 16
   quincy: 17
   reef: 18
+  squid: 19
   dev: 99
 
 
@@ -120,7 +121,7 @@ ceph_directories_mode: "0755"
 # ORIGIN SOURCE
 #
 # Choose between:
-# - 'repository' means that you will get ceph installed through a new repository. Later below choose between 'community', 'rhcs', 'dev' or 'obs'
+# - 'repository' means that you will get ceph installed through a new repository. Later below choose between 'community', 'dev' or 'obs'
 # - 'distro' means that no separate repo file will be added
 #  you will get whatever version of Ceph is included in your Linux distro.
 # 'local' means that the ceph binaries will be copied over from the local machine
@@ -134,7 +135,6 @@ valid_ceph_origins:
 ceph_repository: dummy
 valid_ceph_repository:
   - community
-  - rhcs
   - dev
   - uca
   - custom
@@ -161,16 +161,6 @@ libntirpc_stable_deb_repo: http://ppa.launchpad.net/nfs-ganesha/libntirpc-4/ubun
 # # for a list of available Debian distributions, visit http://download.ceph.com/debian-{{ ceph_stable_release }}/dists/
 # for more info read: https://github.com/ceph/ceph-ansible/issues/305
 # ceph_stable_distro_source: "{{ ansible_facts['distribution_release'] }}"
-
-
-# REPOSITORY: RHCS VERSION RED HAT STORAGE (from 5.0)
-#
-# Enabled when ceph_repository == 'rhcs'
-#
-# This version is supported on RHEL 8
-#
-ceph_rhcs_version: "{{ ceph_stable_rh_storage_version | default(5) }}"
-
 
 # REPOSITORY: UBUNTU CLOUD ARCHIVE
 #
