--- a/roles/ceph-validate/tasks/check_repository.yml
+++ b/roles/ceph-validate/tasks/check_repository.yml
@@ -5,15 +5,15 @@
 
 - name: Validate ceph_repository
   ansible.builtin.fail:
-    msg: "ceph_repository must be either 'community', 'rhcs', 'obs', 'dev', 'custom' or 'uca'"
+    msg: "ceph_repository must be either 'community', 'obs', 'dev', 'custom' or 'uca'"
   when:
     - ceph_origin == 'repository'
-    - ceph_repository not in ['community', 'rhcs', 'obs', 'dev', 'custom', 'uca']
+    - ceph_repository not in ['community', 'obs', 'dev', 'custom', 'uca']
 
 - name: Validate ceph_repository_community
   ansible.builtin.fail:
-    msg: "ceph_stable_release must be 'reef'"
+    msg: "ceph_stable_release must be 'squid'"
   when:
     - ceph_origin == 'repository'
     - ceph_repository == 'community'
-    - ceph_stable_release not in ['reef']
+    - ceph_stable_release not in ['squid']
