drop rhcs references
RHCS moved away from ceph-ansible. All RHCS references should be
removed.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/roles/ceph-validate/tasks/check_repository.yml
+++ b/roles/ceph-validate/tasks/check_repository.yml
@@ -5,10 +5,10 @@
 
 - name: Validate ceph_repository
   ansible.builtin.fail:
-    msg: "ceph_repository must be either 'community', 'rhcs', 'obs', 'dev', 'custom' or 'uca'"
+    msg: "ceph_repository must be either 'community', 'obs', 'dev', 'custom' or 'uca'"
   when:
     - ceph_origin == 'repository'
-    - ceph_repository not in ['community', 'rhcs', 'obs', 'dev', 'custom', 'uca']
+    - ceph_repository not in ['community', 'obs', 'dev', 'custom', 'uca']
 
 - name: Validate ceph_repository_community
   ansible.builtin.fail:
