--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -1158,7 +1158,7 @@
         name: ceph-facts
         tasks_from: container_binary.yml
 
-    - name: Container | disallow pre-reef OSDs and enable all new reef-only functionality
+    - name: Container | disallow pre-squid OSDs and enable all new squid-only functionality
       ansible.builtin.command: "{{ container_binary }} exec ceph-mon-{{ hostvars[groups[mon_group_name][0]]['ansible_facts']['hostname'] }} ceph --cluster {{ cluster }} osd require-osd-release squid"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       run_once: true
@@ -1167,7 +1167,7 @@
         - containerized_deployment | bool
         - groups.get(mon_group_name, []) | length > 0
 
-    - name: Non container | disallow pre-reef OSDs and enable all new reef-only functionality
+    - name: Non container | disallow pre-squid OSDs and enable all new squid-only functionality
       ansible.builtin.command: "ceph --cluster {{ cluster }} osd require-osd-release squid"
       delegate_to: "{{ groups[mon_group_name][0] }}"
       run_once: true
