--- a/roles/ceph-container-common/tasks/release.yml
+++ b/roles/ceph-container-common/tasks/release.yml
@@ -43,3 +43,8 @@
   ansible.builtin.set_fact:
     ceph_release: reef
   when: ceph_version.split('.')[0] is version('18', '==')
+
+- name: Set_fact ceph_release squid
+  ansible.builtin.set_fact:
+    ceph_release: squid
+  when: ceph_version.split('.')[0] is version('19', '==')
