--- a/roles/ceph-handler/handlers/main.yml
+++ b/roles/ceph-handler/handlers/main.yml
@@ -78,4 +78,13 @@
         - "Restart ceph rbdmirrors"
         - "Restart ceph mgrs"
       register: tmpdirpath
-      when: tmpdirpath.path is defined
+      when:
+        - tmpdirpath.path is defined
+        - not _crash_handler_called | default(false) | bool
+        - not _mds_handler_called | default(false) | bool
+        - not _mgr_handler_called | default(false) | bool
+        - not _mon_handler_called | default(false) | bool
+        - not _nfs_handler_called | default(false) | bool
+        - not _osd_handler_called | default(false) | bool
+        - not _rbdmirror_handler_called | default(false) | bool
+        - not _rgw_handler_called | default(false) | bool
