ceph-handler: remove tempdir when all handlers are done
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/roles/ceph-handler/handlers/main.yml
+++ b/roles/ceph-handler/handlers/main.yml
@@ -88,4 +88,16 @@
         - "restart ceph rbdmirrors"
         - "restart ceph mgrs"
       register: tmpdirpath
-      when: tmpdirpath.path is defined
+      when:
+        - tmpdirpath.path is defined
+        - not _crash_handler_called | default(false) | bool
+        - not _mds_handler_called | default(false) | bool
+        - not _mgr_handler_called | default(false) | bool
+        - not _mon_handler_called | default(false) | bool
+        - not _nfs_handler_called | default(false) | bool
+        - not _osd_handler_called | default(false) | bool
+        - not _rbdmirror_handler_called | default(false) | bool
+        - not _rgw_handler_called | default(false) | bool
+        - not _rbd_target_api_handler_called | default(false) | bool
+        - not _tcmu_runner_handler_called | default(false) | bool
+        - not _rbd_target_gw_handler_called | default(false) | bool
