simplify monitor address setting
this drops the following parameters:

- monitor_address_block
- monitor_interface
- monitor_address

The monitor address will be automatically set from `public_network` parameter.

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/group_vars/mons.yml.sample
+++ b/group_vars/mons.yml.sample
@@ -62,7 +62,7 @@ dummy:
 #    - --default-mon-cluster-log-to-stderr=true
 #    - -i={{ monitor_name }}
 #    - --mon-data=/var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
-#    - --public-addr={{ _current_monitor_address }}
+#    - --public-addr={{ _monitor_addresses[inventory_hostname] }}
 #    - --mon-initial-members={{ groups[mon_group_name] | join(',') }}
 
 
