--- a/roles/ceph-mon/defaults/main.yml
+++ b/roles/ceph-mon/defaults/main.yml
@@ -54,7 +54,7 @@ ceph_mon_container_params:
     - --default-mon-cluster-log-to-stderr=true
     - -i={{ monitor_name }}
     - --mon-data=/var/lib/ceph/mon/{{ cluster }}-{{ monitor_name }}
-    - --public-addr={{ _current_monitor_address }}
+    - --public-addr={{ _monitor_addresses[inventory_hostname] }}
     - --mon-initial-members={{ groups[mon_group_name] | map('extract', hostvars, 'ansible_facts') | map(attribute='hostname') | join(',') }}
 
 
