tests: run vagrant_up.sh from dirname
Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>
(cherry picked from commit 3c0e06ea0cdf3098497274dd8ff5a63b117d20c5)

--- a/tox-external_clients.ini
+++ b/tox-external_clients.ini
@@ -32,7 +32,7 @@ deps= -r{toxinidir}/tests/requirements.txt
 changedir={toxinidir}/tests/functional/external_clients{env:CONTAINER_DIR:}
 commands=
   ansible-galaxy collection install -r {toxinidir}/requirements.yml -v -p {envdir}/ansible_collections
-  bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
+  bash {toxinidir}/tests/scripts/vagrant_up.sh {changedir} --no-provision {posargs:--provider=virtualbox}
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
   ansible-playbook -vv --diff -i {changedir}/inventory {toxinidir}/tests/functional/setup.yml
