--- a/tox-docker2podman.ini
+++ b/tox-docker2podman.ini
@@ -29,7 +29,7 @@ changedir= {toxinidir}/tests/functional/docker2podman
 
 commands=
   ansible-galaxy collection install -r {toxinidir}/requirements.yml -v -p {envdir}/ansible_collections
-  bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
+  bash {toxinidir}/tests/scripts/vagrant_up.sh {changedir} --no-provision {posargs:--provider=virtualbox}
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
   # configure lvm
