--- a/roles/ceph-facts/tasks/facts.yml
+++ b/roles/ceph-facts/tasks/facts.yml
@@ -197,7 +197,7 @@
   block:
     - &read-osd-pool-default-crush-rule
       name: Read osd pool default crush rule
-      ansible.builtin.command: grep 'osd pool default crush rule' /etc/ceph/{{ cluster }}.conf
+      ansible.builtin.command: grep 'osd_pool_default_crush_rule' /etc/ceph/{{ cluster }}.conf
       register: crush_rule_variable
       changed_when: false
       check_mode: false
