--- a/roles/ceph-osd/tasks/crush_rules.yml
+++ b/roles/ceph-osd/tasks/crush_rules.yml
@@ -63,7 +63,7 @@
   community.general.ini_file:
     dest: "/etc/ceph/{{ cluster }}.conf"
     section: "global"
-    option: "osd pool default crush rule"
+    option: "osd_pool_default_crush_rule"
     value: "{{ info_ceph_default_crush_rule_yaml.rule_id }}"
     mode: "0644"
   delegate_to: "{{ item }}"
